# lab-cli

./: # Final Infrastructure Closure Protocol.md  # The Universal Inbox — v5 · The Attention.md  .gitignore  2026-06-21_drop_legacy_lab_log.sql  CLI_FOUNDERS_GUIDE.md  Cargo.toml  From Cathedral to Spine.md  LAB_8GB_RADAR_DETAIL_2026-06-21.md  MANHATTAN_FLEET_CANON.md  Makefile  PROJECTION_NAVIGATION.md  README.md  UNIVERSAL_INBOX_V2.md  UNIVERSAL_INBOX_V3.md  UNIVERSAL_INBOX_V4.md  universal-inbox-design.md
commands/: calendar  demo  goblin  greet  listen
lab-stack/: README.md  install.sh  pack.sh  uninstall.sh  verify.sh
lab-stack/radar/: install-lab-radar.sh  radar-export.py  radar-judge.py  radar-report.sh  radar-scan.sh  radar-validate.py  success.json
lab-stack/templates/: notify.env.example  sync.env.example
launchd/: com.minilab.lab-calendar.plist  com.minilab.lab-clock.plist  com.minilab.lab-executor.plist
pwa/: README.md  package-lock.json  package.json  processor.js  server.js
pwa/electron/: main.js  preload.js
pwa/public/: app.js  index.html  manifest.json  styles.css  sw.js
receiver/: CONTRACT.md  listen.mjs  package-lock.json  package.json
receiver/specs/: goblin.awaken-spec.json
remote-lab8gb/control-app/server/: control-api.mjs
remote-lab8gb/places/: run-places.sh
runtime/: current-rules.pointer.json  naming-rules.bootstrap.json
src/: cli.rs  drive.rs  fileops.rs  main.rs  models.rs  normalize.rs  pipeline.rs  rules.rs  supabase.rs
supabase/migrations/: 20260324054000_official_index_conflict_storage_path.sql
