[package]
name = "lab"
version = "0.2.0"
edition = "2021"
description = "minilab CLI — the one Supabase I/O path. Every write hashed with JCS-RFC8785 (serde_jcs) + sha256. Conformance warns, never blocks."

[[bin]]
name = "lab"
path = "src/main.rs"

# The hash path reuses the audited crate (RFC 8785) — never hand-rolled.
# All four are already in the local cargo cache, so the build stays offline.
[dependencies]
serde_json = "1.0.150"
serde_jcs = "0.1.0"
sha2 = "0.10.9"
hex = "0.4.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
